--- a/anko.yaml
+++ b/anko.yaml
@@ -1,7 +1,7 @@
 version: 1.0.0
 application:
   root_path: "."
-  exec_path: "example/fiber/test.go"
+  exec_path: "example/test.go"
   language: go
   show_output: true
   watch:
@@ -10,4 +10,4 @@ application:
       - yaml
       - mod
     files:
-      - teste.txt
+      - anko_logo.png
