--- a/anko.yaml
+++ b/anko.yaml
@@ -1,13 +1,12 @@
-version: 1.0.0
 application:
   root_path: "."
   exec_path: "example/test.go"
   language: go
-  show_output: true
+  show_banner: false
   watch:
     extensions: 
       - go
       - yaml
       - mod
     files:
-      - anko_logo.png
+      - README.md
