--- a/anko.yaml
+++ b/anko.yaml
@@ -1,8 +1,7 @@
 application:
-  root_path: "."
+  root_path: "./"
   exec_path: "example/test.go"
   language: go
-  show_banner: false
   watch:
     extensions: 
       - go
