--- a/anko.yaml
+++ b/anko.yaml
@@ -1,10 +1,7 @@
 application:
-  root_path: "."
-  exec_path: "example/test.go"
-  language: go
+  root_path: "example/nodejs"
+  exec_path: "example/nodejs/index.js"
+  language: node
   watch:
     extensions: 
       - go
-      - env
-    files:
-      - go.mod
