--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ go:
 - 1.15
 - 1.16
 
+before_install:
+  - go get -t -v ./...
+
 script:
-- go test -coverprofile=coverage.txt -covermode=atomic
+- go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
